# news_buddy

./: README.md  app.py  config.py  database.py  hello.py  index.html  main.py  news_buddy.db  pyproject.toml  requirements.txt  scheduler.py  styles.css  summarizer.py
collectors/: __init__.py  anthropic.py  base.py  deepmind.py  rss.py
static/: style.css
templates/: base.html  feed.html  summaries.html  summary.html
